--- a/Mensajeros Urbanos/Venetian.html
+++ b/Mensajeros Urbanos/Venetian.html
@@ -2161,11 +2161,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 134px; height: 41px;
-        -ms-transform: translate(0, 0) translate(184px, 438px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(184px, 438px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(184px, 438px) rotate(0deg);
-        transform: translate(0, 0) translate(184px, 438px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 114px; height: 35px;
+        -ms-transform: translate(0, 0) translate(202px, 441px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(202px, 441px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(202px, 441px) rotate(0deg);
+        transform: translate(0, 0) translate(202px, 441px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2226,40 +2226,40 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i111.text.css:text/base/css*/
-#i111 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: NunitoSans-Regular; font-size: 15px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i111 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: NunitoSans-Regular; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i111.i112.positioning.css:positioning/base/css.2*/
-#i111 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 133px; height: 24px;
-        -ms-transform: translate(0, 0) translate(105px, 414px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(105px, 414px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(105px, 414px) rotate(0deg);
-        transform: translate(0, 0) translate(105px, 414px) rotate(0deg);
+#i111 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 125px; height: 24px;
+        -ms-transform: translate(0, 0) translate(194px, 404px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(194px, 404px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(194px, 404px) rotate(0deg);
+        transform: translate(0, 0) translate(194px, 404px) rotate(0deg);
 }
 /*#/#*//*#i109.text.css:text/base/css*/
-#i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: NunitoSans-Regular; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: NunitoSans-Regular; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i109.i110.positioning.css:positioning/base/css.2*/
-#i109 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 72px;
-        -ms-transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
+#i109 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 333px; height: 41px;
+        -ms-transform: translate(0, 0) translate(16px, 390px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 390px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 390px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 390px) rotate(0deg);
+}
+/*#/#*//*#i68.text.css:text/base/css*/
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: NunitoSans-Regular; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 312px; height: 47px;
+        -ms-transform: translate(0, 0) translate(4px, 357px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 357px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 357px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 357px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 195px; height: 65px;
-        -ms-transform: translate(0, 0) translate(64px, 293px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(64px, 293px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(64px, 293px) rotate(0deg);
-        transform: translate(0, 0) translate(64px, 293px) rotate(0deg);
-}
-/*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: NunitoSans-Regular; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 86px;
-        -ms-transform: translate(0, 0) translate(10px, 352px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(10px, 352px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(10px, 352px) rotate(0deg);
-        transform: translate(0, 0) translate(10px, 352px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 187px; height: 62px;
+        -ms-transform: translate(0, 0) translate(65px, 292px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(65px, 292px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(65px, 292px) rotate(0deg);
+        transform: translate(0, 0) translate(65px, 292px) rotate(0deg);
 }
 /*#/#*//*#i79.shape.css:shape/base/css*/
 #i79 { background-color: #dedede; opacity: 0.00;
@@ -2333,11 +2333,12 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i111.text.html:text/html-->
 <div id="i111">en tiempo récord.</div>
 <!--#/#--><!--#i109.text.html:text/html-->
-<div id="i109">Recogemos, llevamos, entregamos, radicamos y pagamos lo que necesites</div>
+<div id="i109">Recogemos, llevamos, entregamos, radicamos
+y pagamos lo que necesites</div>
+<!--#/#--><!--#i68.text.html:text/html-->
+<div id="i68">Simplificamos tu viday tus negocios</div>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/EZ7uvJB.png"/>
-<!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Simplificamos tu vida y tus negocios</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#i89.image.html:image/html-->
@@ -2405,7 +2406,7 @@ var el = document.getElementById('i2');
 
 el.addEventListener('click', function(e){
     /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
-   
+    
 /*#/#*/
 });
 
@@ -2416,6 +2417,8 @@ if ('click' === 'click') {
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
+/*#/#*//*#i109.i110.positioning.js:positioning/base/js.2*/
+bmShow('i109');
 /*#/#*//*#i46.image.js:image/base/js*/
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
@@ -2488,8 +2491,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i109.i110.positioning.js:positioning/base/js.2*/
-bmShow('i109');
 /*#/#*//*#i111.i112.positioning.js:positioning/base/js.2*/
 bmShow('i111');
 /*#/#*//*#i9.visibility.js:visibility/js*/
@@ -2538,15 +2539,15 @@ data: /*!*/{}/*!*/;
 name: Recogemos, llevamos, entregamos, radicamos y pagamos lo que necesites; customName: false;
 /*#/#*//*#i109.i110.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i68.text.meta:text/meta*/
+name: Simplificamos tu viday tus negocios; customName: false;
+/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i68.text.meta:text/meta*/
-name: Simplificamos tu vida y tus negocios; customName: false;
-/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i79.shape.meta:shape/meta*/
 name: LINK WEB;
 /*#/#*//*#i79.i80.positioning.meta:positioning/meta.2*/
