--- a/Falabella5/Venetian300x600.html
+++ b/Falabella5/Venetian300x600.html
@@ -2134,22 +2134,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(9px, 264px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 264px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 264px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 264px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(8px, 310px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 310px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 310px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 310px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 294px; height: 73px;
-        -ms-transform: translate(0, 0) translate(3px, 335px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(3px, 335px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(3px, 335px) rotate(0deg);
-        transform: translate(0, 0) translate(3px, 335px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
+        -ms-transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
+        transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2163,7 +2163,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 300px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -2173,10 +2173,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i42 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 40px;
-        -ms-transform: translate(0, 0) translate(231px, 395px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(231px, 395px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(231px, 395px) rotate(0deg);
-        transform: translate(0, 0) translate(231px, 395px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
+        transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2258,28 +2258,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i48 { opacity: 1; }
 /*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
 #i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(6px, 410px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 410px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 410px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 410px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
 }
 /*#/#*//*#i50.image.css:image/base/css*/
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(35px, 410px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 410px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 410px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 410px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
+        transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
 }
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(65px, 410px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 410px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 410px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 410px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
+        transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2294,11 +2294,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/WT8Izez.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/yBs9eL2.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/KnViry8.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/ba4TNP5.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/n7WR4cj.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/cIfd9U5.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
@@ -2470,11 +2470,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: WT8Izez.png; fileId: ; sourceTypeId: externalUrl;
+name: yBs9eL2.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: KnViry8.png; fileId: ; sourceTypeId: externalUrl;
+name: ba4TNP5.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: n7WR4cj.png; fileId: ; sourceTypeId: externalUrl;
+name: cIfd9U5.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
