--- a/Falabella5/Cube.html
+++ b/Falabella5/Cube.html
@@ -641,7 +641,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 150px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -657,13 +657,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
 }
 /*#/#*//*#i4.i414.text.css:text/base/css*/
-#i414 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i414 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i414.i415.positioning.css:positioning/base/css.2*/
-#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 220px; height: 32px;
-        -ms-transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
-        transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
+#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 40px;
+        -ms-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
 }
 /*#/#*//*#i4.i458.text.css:text/base/css*/
 #i458 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -732,6 +732,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
         transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
 }
+/*#/#*//*#i5.i474.text.css:text/base/css*/
+#i474 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i474.i475.positioning.css:positioning/base/css.2*/
+#i474 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 40px;
+        -ms-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+}
 /*#/#*//*#i5.i428.image.css:image/base/css*/
 #i428 { opacity: 1; }
 /*#/#*//*#i428.i429.positioning.css:positioning/base/css.2*/
@@ -744,7 +753,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 150px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -786,15 +795,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
         transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
-}
-/*#/#*//*#i5.i474.text.css:text/base/css*/
-#i474 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i474.i475.positioning.css:positioning/base/css.2*/
-#i474 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 220px; height: 32px;
-        -ms-transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
-        transform: translate(0, 0) translate(40px, 160px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -905,7 +905,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/0hkBwZt.png"/>
+<img id="i130" src="https://i.imgur.com/fKfbKDl.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i4.i414.text.html:text/html-->
@@ -928,10 +928,12 @@ url('fonts/') format('svg');
 <div id="i30"></div>
 <!--#/#--><!--#i5.i472.text.html:text/html-->
 <div id="i472">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.</div>
+<!--#/#--><!--#i5.i474.text.html:text/html-->
+<div id="i474">¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/ymTXuCi.png"/>
+<img id="i58" src="https://i.imgur.com/0t357XL.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
 <div id="i434"></div>
 <!--#/#--><!--#i5.i424.image.html:image/html-->
@@ -940,8 +942,6 @@ url('fonts/') format('svg');
 <img id="i420" src="https://i.imgur.com/RM74AKi.png"/>
 <!--#/#--><!--#i5.i468.image.html:image/html-->
 <img id="i468" src="https://i.imgur.com/3WrUEnv.png"/>
-<!--#/#--><!--#i5.i474.text.html:text/html-->
-<div id="i474">¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -1052,7 +1052,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'hwhatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1129,7 +1129,7 @@ var el = document.getElementById('i420');
 
 el.addEventListener('click', function(e){
     /*#i422.i423.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'hwhatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1210,7 +1210,7 @@ var el = document.getElementById('i444');
 
 el.addEventListener('click', function(e){
     /*#i446.i447.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'hwhatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1274,7 +1274,7 @@ data: /*!*/{}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":false}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1317,6 +1317,10 @@ data: /*!*/{}/*!*/;
 name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.; customName: false;
 /*#/#*//*#i472.i473.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i474.text.meta:text/meta*/
+name: ¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?; customName: false;
+/*#/#*//*#i474.i475.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i428.image.meta:image/meta*/
 name: LOGO copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1326,7 +1330,7 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":false}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i434.shape.meta:shape/meta*/
 name: Link copy;
 /*#/#*//*#i434.i437.positioning.meta:positioning/meta.1*/
@@ -1346,10 +1350,6 @@ name: T copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i468.i469.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i474.text.meta:text/meta*/
-name: ¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?; customName: false;
-/*#/#*//*#i474.i475.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
