--- a/Falabella5/Venetian300x600.html
+++ b/Falabella5/Venetian300x600.html
@@ -2294,11 +2294,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/yBs9eL2.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/6IF31Xc.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/ba4TNP5.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/HeTkD8P.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/cIfd9U5.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/O42Fdhm.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
