--- a/Falabella5/Venetian320x480.html
+++ b/Falabella5/Venetian320x480.html
@@ -2308,11 +2308,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/yJZJsTt.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/XeUgzQj.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/83xCIhc.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/CrOq2WJ.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/yBs9eL2.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/O42Fdhm.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
